# nexa

./: .gitignore  LICENSE  README.md  pyproject.toml
src/nexa/: __init__.py  __main__.py  cli.py  main.py
src/nexa/adapters/ai/: hf_grammar_refiner.py
src/nexa/adapters/parsers/: unstructured_parser.py
src/nexa/core/use_cases/: refine_text.py
src/nexa/interfaces/: document_parser.py  text_refiner.py
src/nexa/services/: api.py
tests/unit/: test_unstructured_parser.py
