[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "nexa"
version = "0.1.0"
description = "Electronic document management system — with integration of artificial intelligence"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Henadz", email = "HVabishchevich@mdait.by" }
]
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi[all]>=0.118.0,<0.119.0",
    "pydantic[settings]>=2.11.0,<2.12.0",
    "sqlalchemy>=2.0.43,<2.1.0",
    "streamlit>=1.49.1,<1.50.0",
    "python-dotenv>=1.1.1,<2.0.0",
    "torch>=2.8.0,<2.9.0",
    "transformers>=4.57.0,<4.58.0",
    "huggingface-hub>=0.35.0,<0.36.0",
    "accelerate>=1.6.0,<1.7.0",
    "safetensors>=0.5.2,<0.6.0",
    "sentence-transformers>=3.3.1,<3.4.0",
    "pypdf>=5.2.0,<6.0.0",
    "python-docx>=1.1.2,<2.0.0",
    "unstructured>=0.17.0,<0.18.0",
]
optional-dependencies = { dev = [
    "pytest>=8.4.2,<9.0.0",
    "black>=25.9.0,<26.0.0",
    "ruff>=0.12.0,<0.13.0",
    "mypy>=1.15.0,<2.0.0",
    "isort>=5.13.2,<6.0.0"
] }
scripts = { dev = "nexa.cli:dev_server" }
packages = [{ include = "nexa", from = "src" }]

# -------- Справочная секция (не влияет на сборку) --------
[tool.versions]
python = "3.13"
fastapi = "0.118.0"
sqlalchemy = "2.0.43"
pydantic = "2.11.0"
pytest = "8.4.2"
black = "25.9.0"
streamlit = "1.49.1"
python-dotenv = "1.1.1"
torch = "2.8.0"
transformers = "4.57.0"
huggingface-hub = "0.35.0"
accelerate = "1.6.0"
safetensors = "0.5.2"
sentence-transformers = "3.3.1"

# -------- Настройки инструментов --------
[tool.ruff]
line-length = 88
target-version = "py313"

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.13"
strict = true
#mypy_path = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=nexa --cov-report=term-missing"